# ime_audio

./: .gitignore  CMakeLists.txt  README.md  installer.iss  voice_ime_template.ini
.github/workflows/: release.yml
scripts/: install_model.bat  install_sherpa.bat  install_sherpa.ps1
src/: asr_backend.c  asr_backend.h  audio_recorder.c  audio_recorder.h  gemini_client.c  gemini_client.h  groq_client.c  groq_client.h  input_injector.c  input_injector.h  main.c  voice_ime.rc
